# nixos_server_lock

./: .envrc  .gitignore  LICENSE  README.md  default.nix  elm-srcs.nix  elm.json  flake.nix  generate_nix_build.sh  index.html  locking_sequence.txt  random_succes.sh
.github/workflows/: build.yml
backend/: default.nix  pyproject.toml  setup.py
backend/msfocb/: panic_button.py
frontend/: README.md  copy_generated.sh  default.nix  elm-srcs.nix  elm.json  index.html  shell.nix
frontend/src/: Content.elm  Main.elm
src/: Main.elm
static/api/: config  verify
