[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "panic_button"
version = "0.0.0"
description = ""

[tool.flit.module]
name = "msfocb"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
msfocb = ["py.typed"]

[project.scripts]
nixos_panic_button = "msfocb.panic_button:main"
