[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nixos_server_lock"
version = "0.0.0"
description = ""

[tool.flit.module]
name = "msfocb"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
msfocb = ["py.typed"]

[project.scripts]
nixos_server_lock = "msfocb.nixos_server_lock:main"
